# git-lrc-agent

./: .gitignore  .pr_agent.toml  FINAL_CODE_CHANGES.md  README.md  pyproject.toml  system_prompt_start.txt  test_bug.py
git_lrc_agent/: __init__.py  cli.py  reviewer.py
git_lrc_agent/git/: __init__.py  staged_diff_provider.py
git_lrc_agent/hooks/: __init__.py  installer.py
git_lrc_agent/metrics/: calculator.py  db.py  models.py  quality_gates.toml
git_lrc_agent/output/: __init__.py  structured_output.py
git_lrc_agent/security/: __init__.py  patterns.py  scanner.py
git_lrc_agent/server/: __init__.py  app.py
git_lrc_agent/server/static/: index.html
git_lrc_agent/server/static/css/: dashboard.css
git_lrc_agent/server/static/js/: app.js
git_lrc_agent/state/: __init__.py  store.py
git_lrc_agent/taxonomy/: __init__.py  classifier.py  severity.py  taxonomy.py
tests/: test_metrics.py  test_security_scanner.py  test_structured_output.py  test_taxonomy.py
