[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-lrc-agent"
version = "0.1.0"
description = "Local commit-time AI code review with a rich dashboard — powered by PR-Agent"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "git-lrc-agent contributors"},
]
keywords = ["code-review", "ai", "git", "pre-commit", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "pr-agent>=0.36",
    "fastapi>=0.104",
    "uvicorn>=0.22",
    "gitpython>=3.1",
    "pydantic>=2.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
]

[project.scripts]
git-lrc = "git_lrc_agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["git_lrc_agent*"]
